--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@acrolinx/typescript-sdk": "^0.0.63",
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.1",
+    "octokit": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
