feat: Update Acrolinx API token handling in GitHub Action. Changed action.yml to allow the API token to be optional and provided via an environment variable. Updated README.md with new usage instructions for local testing and modified error messages in main.ts and tests to reflect these changes.

--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,8 @@ branding:
 # Define your inputs here.
 inputs:
   acrolinx-api-token:
-    description: Acrolinx API token for style checking (required)
-    required: true
+    description: Acrolinx API token for style checking (can also be provided via ACROLINX_API_TOKEN environment variable)
+    required: false
   dialect:
     description: Language dialect for Acrolinx analysis (e.g., american_english, british_english)
     required: false
