refactor: Update .env.example and action.yml for Acrolinx API token input format. Improve README.md formatting and enhance clarity of input/output tables. Clean up whitespace in example workflow and tests for consistency.

--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,9 @@ inputs:
     description: Acrolinx API token for style checking (can also be provided via ACROLINX_API_TOKEN environment variable)
     required: false
   dialect:
-    description: Language dialect for Acrolinx analysis (e.g., american_english, british_english)
+    description:
+      Language dialect for Acrolinx analysis (e.g., american_english,
+      british_english)
     required: false
     default: 'american_english'
   tone:
