fix: Update action.yml to make GitHub token input required and modify test mocks for repository context. Adjusted environment variable handling in tests for improved accuracy.

--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     default: '3'
   github-token:
     description: GitHub token for API access (uses GITHUB_TOKEN by default)
-    required: false
+    required: true
 
 # Define your outputs here.
 outputs:
