--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Install Dependencies
         id: install
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
       - name: Build dist/ Directory
         id: build
