fix: Update CI workflow to include Acrolinx and GitHub tokens as inputs. Modify main.ts to allow tokens to be retrieved from environment variables if not provided, enhancing flexibility in token management.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,8 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          acrolinx_token: ${{ secrets.ACROLNX_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print Output
         id: output
