fix: Correct the Acrolinx API token secret name in CI workflow for consistency with environment variable naming conventions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,9 @@ jobs:
         id: test-action
         uses: ./
         with:
-          acrolinx_token: ${{ secrets.ACROLNX_TOKEN }}
+          acrolinx_token: ${{ secrets.ACROLINX_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Print Output
         id: output
