--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
         with:
           acrolinx_token: ${{ secrets.ACROLINX_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          tone: formal
+          dialect: american_english
+          style-guide: ap
 
       - name: Print Output
         id: output
