feat: Implement PR comment functionality to provide Acrolinx analysis results on pull requests, enhancing user feedback and interaction. Update permissions for pull requests and add unit tests for comment service.

--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,11 @@ outputs:
   acrolinx-results:
     description: JSON string containing Acrolinx analysis results
 
+# Define permissions required by the action
+permissions:
+  contents: read
+  pull-requests: write
+
 runs:
   using: node20
   main: dist/index.js
