--- a/action.yml
+++ b/action.yml
@@ -46,8 +46,9 @@ outputs:
 
 # Define permissions required by the action
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
+  statuses: write
 
 runs:
   using: node20
