feat: Enhance GitHub Actions workflow with write permissions and implement PR comment creation for analysis results

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
   test-action:
     name: GitHub Actions Test
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      statuses: write
 
     steps:
       - name: Checkout
