--- a/action.yml
+++ b/action.yml
@@ -30,10 +30,13 @@ inputs:
     description: Style guide for Acrolinx analysis (e.g., ap, chicago, apa)
     required: false
     default: 'ap'
-
   github_token:
     description: GitHub token for API access (uses GITHUB_TOKEN by default)
     required: false
+  add_commit_status:
+    description: Add commit status updates (default is true)
+    required: false
+    default: 'true'
 
 # Define your outputs here.
 outputs:
