chore: Update action.yml inputs to require Acrolinx and GitHub tokens
- Changed the 'acrolinx_token' and 'github_token' inputs from optional to required in action.yml.
- Updated CI workflow to pass tokens as environment variables instead of inputs for better security.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,12 @@ jobs:
         id: test-action
         uses: ./
         with:
-          acrolinx_token: ${{ secrets.ACROLINX_TOKEN }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           tone: formal
           dialect: american_english
           style-guide: ap
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACROLINX_TOKEN: ${{ secrets.ACROLINX_TOKEN }}
 
       - name: Print Output
         id: output
