feat: Update Acrolinx Action name and version
- Renamed the action from "Acrolinx Analyzer" to "Acrolinx NextGen Analyzer" for clarity.
- Updated the author to "Acrolinx GmbH" to reflect the correct organization.
- Changed the branding color from green to blue for improved visual identity.
- Bumped the version number from 0.0.0 to 0.1.0 in both package.json and package-lock.json to signify a new release.

--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
-name: Acrolinx Analyzer
+name: Acrolinx NextGen Analyzer
 description:
   A GitHub Action that analyzes and displays recent commit changes with detailed
   diffs and file modifications, and runs Acrolinx style checks on modified files
-author: Your name or organization here
+author: Acrolinx
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
   icon: check-circle
-  color: green
+  color: blue
 
 # Define your inputs here.
 inputs:
