feat: Rename action and update branding
- Changed action name from "acrolinx-action" to "acrolinx-nextgen-analyzer" in package.json and package-lock.json.
- Updated action branding icon from "check-circle" to "shield-check" and color from "blue" to "green" in action.yml.
- Bumped version number to 0.0.1 to reflect the changes.

--- a/action.yml
+++ b/action.yml
@@ -6,8 +6,8 @@ author: Acrolinx
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
-  icon: check-circle
-  color: blue
+  icon: shield-check
+  color: green
 
 # Define your inputs here.
 inputs:
