--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "acrolinx-action",
-  "description": "GitHub Actions TypeScript template",
-  "version": "0.1.0",
-  "author": "",
+  "name": "acrolinx-nextgen-analyzer",
+  "description": "Acrolinx NextGen Analyzer",
+  "version": "0.0.1",
+  "author": "Acrolinx",
   "type": "module",
   "private": true,
-  "homepage": "https://github.com/acrolinx/github-action",
+  "homepage": "https://github.com/acrolinx/nextgen-analyzer",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/acrolinx/github-action.git"
+    "url": "git+https://github.com/acrolinx/nextgen-analyzer.git"
   },
   "bugs": {
-    "url": "https://github.com/acrolinx/github-action/issues"
+    "url": "https://github.com/acrolinx/nextgen-analyzer/issues"
   },
   "keywords": [
     "actions"
@@ -43,22 +43,22 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
-    "@github/local-action": "^5.0.0",
-    "@jest/globals": "^30.0.4",
+    "@github/local-action": "^5.1.0",
+    "@jest/globals": "^30.0.5",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.4",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-prettier": "^5.5.1",
-    "jest": "^30.0.4",
+    "eslint-plugin-prettier": "^5.5.3",
+    "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
     "rollup": "^4.45.1",
