chore: Update license to Apache 2.0 and reflect in package.json
- Replaced the MIT License with the Apache License 2.0 in the LICENSE file.
- Updated package.json to specify the new license type as "Apache-2.0".

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "author": "Acrolinx",
   "type": "module",
+  "license": "Apache-2.0",
   "private": true,
   "homepage": "https://github.com/acrolinx/nextgen-analyzer",
   "repository": {
