--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,13 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-    versioning-strategy: increase
+    groups:
+      npm-development:
+        dependency-type: development
+        update-types:
+          - minor
+          - patch
+      npm-production:
+        dependency-type: production
+        update-types:
+          - patch
