--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
   },
   "dependencies": {
-    "@acrolinx/nextgen-toolkit": "^0.0.69",
+    "@markupai/toolkit": "^0.0.70",
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1",
     "octokit": "^5.0.3"
