--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -7,15 +7,13 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if:
-      github.event.pull_request.user.login == 'dependabot[bot]' &&
-      github.repository == 'markupai/markupai-github-action'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'markupai/markupai-github-action'
     steps:
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v2
         with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve a PR
         run: gh pr review --approve "$PR_URL"
         env:
