--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'markupai/markupai-github-action'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'markupai/github-action'
     steps:
       - name: Dependabot metadata
         id: metadata
