--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -7,7 +7,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'markupai/github-action'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'markupai/content-guardian-action'
     steps:
       - name: Dependabot metadata
         id: metadata
