chore: change action branding color from coral to black

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ author: Markup AI
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
   icon: shield
-  color: coral
+  color: black
 
 # Define your inputs here.
 inputs:
