chore: correct spelling and grammar in action description

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Markup AI Content Guardian
 description:
-  Github Action that automats content quality checks to ensuring consistent
+  GitHub Action that automates content quality checks to ensure consistent
   brand alignment and proactive content governance.
 author: Markup AI
 
